corretta la parte 2 del terzo esercizio